// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
.c5 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  margin-bottom: 3.2rem;
}

.c1 {
  position: relative;
  top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  margin: 0;
  padding: 0;
  overflow: visible;
  list-style-type: none;
}

.c2 {
  margin-left: 0.4rem;
  padding: 1rem 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-bottom: 1px solid #bbcadf;
  border-radius: 0.6rem 0.6rem 0 0;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: opacity 250ms linear;
  transition: opacity 250ms linear;
}

.c2[aria-selected="false"]:hover {
  opacity: 0.7;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #7598d6;
}

.c3 {
  color: #3e486e;
  background-color: #fff;
}

.c3.react-tabs__tab-panel--selected {
  padding: 2.4rem;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.4rem;
    border-bottom: 1px solid #bbcadf;
    border-radius: 0.6rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.4rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-2"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h2
          class="c5"
        >
          CDI
        </h2>
      </div>
      <h3
        class="c5"
      >
        titre 1
      </h3>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="c3"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
.c5 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  margin-bottom: 3.2rem;
}

.c1 {
  position: relative;
  top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  margin: 0;
  padding: 0;
  overflow: visible;
  list-style-type: none;
}

.c2 {
  margin-left: 0.4rem;
  padding: 1rem 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-bottom: 1px solid #bbcadf;
  border-radius: 0.6rem 0.6rem 0 0;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: opacity 250ms linear;
  transition: opacity 250ms linear;
}

.c2[aria-selected="false"]:hover {
  opacity: 0.7;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #7598d6;
}

.c3 {
  color: #3e486e;
  background-color: #fff;
}

.c3.react-tabs__tab-panel--selected {
  padding: 2.4rem;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.4rem;
    border-bottom: 1px solid #bbcadf;
    border-radius: 0.6rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.4rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-6"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
        >
          CDI
        </h4>
      </div>
      <h5
        class="c5"
      >
        titre 1
      </h5>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="c3"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
.c5 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  margin-bottom: 3.2rem;
}

.c1 {
  position: relative;
  top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  margin: 0;
  padding: 0;
  overflow: visible;
  list-style-type: none;
}

.c2 {
  margin-left: 0.4rem;
  padding: 1rem 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-bottom: 1px solid #bbcadf;
  border-radius: 0.6rem 0.6rem 0 0;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: opacity 250ms linear;
  transition: opacity 250ms linear;
}

.c2[aria-selected="false"]:hover {
  opacity: 0.7;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #7598d6;
}

.c3 {
  color: #3e486e;
  background-color: #fff;
}

.c3.react-tabs__tab-panel--selected {
  padding: 2.4rem;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.4rem;
    border-bottom: 1px solid #bbcadf;
    border-radius: 0.6rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.4rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-9"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-8"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-11"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-10"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-8"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h5
          class="c5"
        >
          CDI
        </h5>
      </div>
      <h6
        class="c5"
      >
        titre 1
      </h6>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="c3"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
